# iris-heaplang-experiments

./: .gitignore  .gitlab-ci.yml  .gitmodules  IRIS_VERSION  LICENSE  Makefile  Makefile.coq  Makefile.coq.local  README.md  _CoqProject  atomic.v  atomic_incr.v  atomic_pair.v  atomic_pcas.v  atomic_sync.v  coq-iris-examples.opam  evmap.v  flat.v  incr.v  misc.v  opam  opam.pins  pair_cas.v  pcas.v  peritem.v  proof.v  protocol.v  simple_sync.v  srv.v  sync.v  sync_stack.v  treiber.v  treiber_stack.v
docs/: flat.md
docs/tex/: .gitignore  Makefile  atomic.tex  iris.sty
theories/: .dir-locals.el  atomic.v  atomic_incr.v  atomic_pcas.v  atomic_sync.v  evmap.v  flat.v  misc.v  peritem.v  simple_sync.v  sync.v  treiber.v
theories/array_based_queuing_lock/: abql.v
theories/barrier/: barrier.v  example_client.v  example_joining_existentials.v  proof.v  protocol.v  specification.v
theories/cl_logic/: bi.v  clprop.v  tests.v
theories/concurrent_stacks/: concurrent_stack1.v  concurrent_stack2.v  concurrent_stack3.v  concurrent_stack4.v  spec.v  specs.v
theories/experiments/: ex_1.v
theories/hocap/: README.md  abstract_bag.v  cg_bag.v  concurrent_runners.v  contrib_bag.v  exclusive_bag.v  fg_bag.v  parfib.v  shared_bag.v
theories/lecture_notes/: bag.v  ccounter.v  coq_intro_example_1.v  coq_intro_example_2.v  lists.v  lists_guarded.v  lock.v  lock_unary_spec.v  modular_incr.v  recursion_through_the_store.v  stack.v
theories/logatom/: cinc.v  proph_erasure.v  treiber.v  treiber2.v
theories/logatom_stack/: hocap_spec.v  spec.v  stack.v
theories/logrel/: persistent_pred.v
theories/logrel_heaplang/: ltyping.v  ltyping_safety.v
theories/proph/: eager_coin.v  (+8 more)
(+132 files in other folders)
