opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "The Iris Team and Contributors"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/examples/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/examples.git"

synopsis: "A collection of case studies for Iris -- not meant to be used as a dependency of anything"

depends: [
  "coq-iris-heap-lang" { (= "dev.2021-07-28.2.fb31118e") | (= "dev") }
  "coq-autosubst" { = "dev" }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
